cmake_minimum_required(VERSION 3.14)
project(NonGravitar)

set(CMAKE_CXX_STANDARD 14)

include_directories(src)

add_executable(NonGravitar
        src/main.cpp
        src/shared/Vector.cpp
        src/shared/Vector.hpp
        src/shared/Matrix.cpp
        src/shared/Matrix.hpp
        src/shared/Color.cpp
        src/shared/Color.hpp
        src/shared/Point.cpp
        src/shared/Point.hpp
        src/shared/Point2D.cpp
        src/shared/Point2D.hpp
        src/shared/Shape.cpp
        src/shared/Shape.hpp
		src/shared/Segment.cpp
		src/shared/Segment.hpp
        src/shared/Utility.cpp
        src/shared/Utility.h
        src/engine/Bitmap.cpp
        src/engine/Bitmap.hpp
        src/engine/PrintableBitmap.cpp
        src/engine/PrintableBitmap.hpp
        src/engine/GameConfig.h
        src/engine/GameEngine.cpp
        src/engine/GameEngine.hpp
        src/engine/Viewport.cpp
        src/engine/Viewport.hpp
        src/entities/Bunker.cpp
        src/entities/Bunker.hpp
        src/entities/BunkerA.cpp
        src/entities/BunkerA.hpp
        src/entities/BunkerB.cpp
        src/entities/BunkerB.hpp
        src/entities/BunkerC.cpp
        src/entities/BunkerC.hpp
        src/entities/Damageable.cpp
        src/entities/Damageable.hpp
        src/entities/Entity.cpp
        src/entities/Entity.hpp
        src/entities/Fuel.cpp
        src/entities/Fuel.hpp
        src/entities/SmallFuel.cpp
        src/entities/SmallFuel.hpp
        src/entities/BigFuel.cpp
        src/entities/BigFuel.hpp
        src/entities/Level.cpp
        src/entities/Level.hpp
        src/entities/PlanetEntity.cpp
        src/entities/PlanetEntity.hpp
        src/entities/PlanetLevel.cpp
        src/entities/PlanetLevel.hpp
        src/entities/Player.cpp
        src/entities/Player.hpp
        src/entities/Projectile.cpp
        src/entities/Projectile.hpp
		src/entities/PlayerProjectile.cpp
        src/entities/PlayerProjectile.hpp
        src/entities/SolarSystem.cpp
        src/entities/SolarSystem.hpp
        src/entities/DynamicEntity.cpp
        src/entities/DynamicEntity.hpp
        src/entities/PlayerBeam.cpp
        src/entities/PlayerBeam.hpp
		src/entities/Beam_FX.cpp
        src/entities/Beam_FX.hpp
		)
